@@ -15,6 +15,7 @@
         <property name="password" type="string"/>
         <property name="socket_path" type="string"/>
         <property name="port" type="int"/>
+        <property name="interface" type="string"/>
         <property name="protocol" type="string"/>
       </properties>
     </component>
